# 42-RAG

./: .gitignore  Makefile  README.md  controller.py  main.py  pyproject.toml  pyrightconfig.json  test.py
project_management/: cahier_des_charges_RAG.md
src/: Controller.py  Indexer.py  Ingest.py  Retriever.py  __main__.py  test.py
src/file_chunk/: indexer.py  load_and_chunk.py
src/models/: models.py
src/retriever/: bm25s_retriever.py  chroma_retriever.py
