[project]
name = "42-rag"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.3",
    "chromadb>=1.5.7",
    "fire>=0.7.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.30",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.13.0",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "types-tqdm>=4.67.3.20260408",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]
