[project]
name = "42-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pystemmer>=3.0.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "types-tqdm>=4.67.3.20260518",
]
