[project]
name = "42-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "fire>=0.7.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pystemmer>=3.0.0",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
    "vllm>=0.21.0",
]

[dependency-groups]
dev = [
    "types-tqdm>=4.67.3.20260518",
]
